--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://notes.avinashdharan.com"
+baseURL = "https://notes.avinashdharan.com/"
 languageCode = "en-us"
 relativeURLs = false
 disablePathToLower = true
